gd-main-view: Make selection_mode_do_select_range handle any order

This makes the function work no matter what order the two iters
are in the model, where previously it would break unless first_element
was before last_element.

https://bugzilla.gnome.org/show_bug.cgi?id=697645